cmake_minimum_required(VERSION 3.6)
project(untitled)
find_package(PCL 1.4 REQUIRED)
set(CMAKE_CXX_STANDARD 11)
find_package(PCL 1.4 REQUIRED)
include_directories(${PCL_INCLUDE_DIRS})
link_directories(${PCL_LIBRARY_DIRS})
add_definitions(${PCL_DEFINITIONS})
#add_executable (pairwise_incremental_registration pairwise_incremental_registration.cpp)
#target_link_libraries (pairwise_incremental_registration ${PCL_LIBRARIES})
add_executable(filter src/filter.cpp)
target_link_libraries (filter ${PCL_LIBRARIES})
#add_executable (pcl_visualizer_demo pcl_visualizer_demo.cpp)
#target_link_libraries (pcl_visualizer_demo ${PCL_LIBRARIES})
#add_executable (alignment_prerejective alignment_prerejective.cpp)
#target_link_libraries (alignment_prerejective ${PCL_LIBRARIES})
add_executable (icptest src/icptest.cpp)
target_link_libraries (icptest ${PCL_LIBRARIES})
add_executable (icporigintest src/icporigintest.cpp)
target_link_libraries (icporigintest ${PCL_LIBRARIES})
set(SOURCE_FILES  src/filter.cpp src/icptest.cpp src/icporigintest.cpp)
add_executable(untitled ${SOURCE_FILES})
